Update images, add hackathon images, fix QyE images - Index placeholders replaced with proper images - Hackathon photos added to article - QyE panel images use object-fit to fix weird stretching issue

--- a/css/product-qye.css
+++ b/css/product-qye.css
@@ -938,7 +938,10 @@ footer[role="contact"] small {
     right: 0;
     bottom: 0;
     width: 40vw;
+    min-height: 100%;
     max-height: 100%;
+    object-fit: contain;
+    object-position: bottom;
     margin: 0;
   }
 }
